# iomete-jdbc-sync

./: .dockerignore  .gitignore  Makefile  application.conf  driver.py  readme.md  requirements-prod.txt  setup.cfg
docker/: Dockerfile
iomete_jdbc_sync/: __init__.py  main.py
iomete_jdbc_sync/connection/: source.py
iomete_jdbc_sync/sync/: __init__.py  _lakehouse.py  _migrator.py  _sync_strategy.py  config.py  iometeLogger.py  iomete_logger.py  sync_mode.py  utils.py
iomete_jdbc_sync/test/: _spark_session.py  integration_test.py  test_table_name_extractor.py
